# hive-web

./: .gitignore  AGENTS.md  README.md  pyproject.toml  readme_rus.md
docs/: architecture.md
examples/: mcp-configs.md
scripts/: install-egress-routes-launchdaemon.sh  install-hermes-mcp.sh  install-ozon-direct-bypass.sh  smoke-action-web.py  test-mcp-client.py  uninstall-egress-routes-launchdaemon.sh  update-egress-routes.sh
src/hive_web_runtime/: smoke.py
src/hive_web_runtime/action_web/: browser.py  models.py  snapshots.py
src/hive_web_runtime/core/: artifacts.py  config.py  egress_routes.py  tokens.py
src/hive_web_runtime/mcp_server/: server.py  tools.py
src/hive_web_runtime/static_web/: client.py  models.py  transport.py
tests/: test_action_web.py  test_egress_routes.py  test_mcp_tools.py  test_static_web.py
