[project]
name = "hive-web-runtime"
version = "0.1.0"
description = "MCP runtime exposing cheap static web search/extract and token-aware Playwright action-web sessions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "mcp>=1.3",
  "pydantic>=2.7",
  "playwright>=1.49",
  "tiktoken>=0.8",
]

[project.scripts]
hive-web-runtime = "hive_web_runtime.mcp_server.server:main"
hive-web-smoke = "hive_web_runtime.smoke:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hive_web_runtime"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
